@@ -976,16 +976,19 @@ class EnumerationField(InputField):
 
     """
     _INVALID_SELECTION = wx.NOT_FOUND
+
+    def _enumeration(self):
+        return self._row.enumerate(self.id())
     
     def _choices(self):
-        return [x[1] for x in self._row.enumerate(self.id())]
+        return [x[1] for x in self._enumeration()]
 
     def _get_value(self):
         i = self._ctrl.GetSelection()
         if i == wx.NOT_FOUND:
             value = None
         else:
-            value = self._type.enumerator().values()[i]
+            value = self._enumeration()[i][0]
         return self._type.export(value)
 
     def _set_value(self, value):
@@ -1002,6 +1005,9 @@ class EnumerationField(InputField):
 class ChoiceField(EnumerationField):
     """Field with a fixed enumeration represented by 'wx.Choice'."""
     _INVALID_SELECTION = 0
+    
+    def _enumeration(self):
+        return [(None, '')] + super(ChoiceField, self)._enumeration()
     
     def _create_ctrl(self):
         control = wx.Choice(self._parent, choices=self._choices())
