@@ -1,3 +1,8 @@
+2009-06-26  Tomas Cerha  <cerha@brailcom.org>
+
+	* lib/pytis/form/inputfield.py:
+	Show empty items for NULL value in SelectionType.CHOICE input fields..
+
 2009-06-25  Tomas Cerha  <cerha@brailcom.org>
 
 	* db/db_pytis_cms.py:
